--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server.ts",
+    "start": "node server.ts",
     "build": "tsc --project ./",
     "test": "echo \"Error: no test specified\" && exit 1",
     "postinstall": "npm run build",
