--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "software-engineering-node",
+  "name": "movie-webapp-server",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
